# armadito-systray-ui

./: .gitignore  .travis.yml  README.md  autogen.sh  configure.ac  sonar-project.properties
gtk/: .gitignore  Makefile.am  autogen.sh  configure.ac
gtk/icons/: Makefile.am
gtk/icons/scalable/: Makefile.am
gtk/po/: LINGUAS  POTFILES.in  fr.po  indicator-armadito.pot
gtk/resource/: indicator-armadito.gresource.xml
gtk/src/: Makefile.am  app.c  app.h  main.c
gtk/ui/: indicator-armadito.ui
python/: .gitignore  Makefile.am  setup.cfg  setup.py
python/armadito/: dbus.py  indicator.py  jrpc.py  model.py  notifier.py
python/po/: fr.po  indicator-armadito.pot
python/po/en/LC_MESSAGES/: indicator-armadito.po
python/po/fr/LC_MESSAGES/: indicator-armadito.po
python/tests/: test-jrpc.py
